# madcop

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKEND-COVERAGE-REPORT.md  LICENSE  README.md  ROADMAP.md  ROADMAP_v1.6_plus.md  brain.db-shm  pyproject.toml  start.sh
.github/workflows/: tests.yml
_backup_20260625/: prompts.py
desktop/: .gitignore  LEGACY_REACT.md  README.md  VUE3_MIGRATION_REPORT.md  index.html  package-lock.json  package.json  vite.config.ts  vite.vue.config.ts  vite.vue.dev.config.ts  vue-dev.html  vue-preview.html
desktop/dist-vue/: index.html
desktop/electron/: main.ts
desktop/scripts/: build-sidecars.ts  check-vue-client-imports.ts  electron-dev.ts  madcop-agent-launcher.sh
desktop/src/: App.tsx  MadcopApp.tsx  main.test.tsx  main.tsx
docs/: SESSION_HANDOVER_2026-07-17.md  VUE3_MIGRATION_HANDBOOK.md  build-and-test-handover.md  deerflow-analysis.md  design-gushen-agent-p0.md  flowtrace-research.md  handover-2026-07-11.md  llm-harness.md  memory-research.md  v0.6.0_PRD.md
docs/design-tool/: DESIGN.md
docs/skills/: computer-use.md  frontend-preview.md  gushen-quant.md
docs/workflow-editor/: MODES.md  PLAN.md
examples/: decisions_sample.jsonl  eval_sample.jsonl  replay_sample.json  v060_benchmark.json  v060_benchmark.py  v060_oms_cancel_demo.py  v070_subagent_demo.py  v071_golden_benchmark.py  v071_golden_results.json  v090_tool_use_demo.py  v140_growing_agent_demo.py  v150_computer_use_demo.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/hooks/: useTranslation.ts
frontend/lib/: api.ts  i18n.ts  sendShortcut.ts
frontend/stores/: chatStore.ts
frontend/types/: chat.ts
madcop/: __init__.py  __main__.py  banner.py  doctor.py  event.py
madcop/adapters/: base.py  wms.py
madcop/agent/: __init__.py  clarification.py  crystallize.py  graph.py  loop_detection.py  memory_pipeline.py  middleware.py  outcome.py  plan_execute.py  reflection.py  retrieval.py  routing_executor.py  skill_forge.py  skills.py  streaming.py  summarize.py  todo_middleware.py  trace.py  tracing.py
madcop/agent_network/: agent_mode_api.py  api.py  engine.py  react_engine.py  session_context.py  specialist_runtime.py  task_router.py
madcop/anomaly/: cusum.py  detector.py  rules.py
madcop/arena/: api.py
madcop/brain/: __init__.py  consolidate.py  markdown.py  middleware.py  prescreen.py  schema.py  store.py  unified.py
madcop/channels/: __init__.py  base.py  discord.py  telegram.py
madcop/config/: __init__.py  hotreload.py  settings.py
madcop/counterfactual/: __init__.py  cost.py
madcop/decision/: __init__.py  diff.py
madcop/eval/: __init__.py  harness.py
madcop/extras/: api.py
madcop/llm/: __init__.py  anthropic_client.py  capabilities.py  client.py  factory.py  harness.py  multimodal.py  retry.py
madcop/memory/: __init__.py  buffer.py  compactor.py  episodic.py  growth.py  hybrid.py  insight.py  persona.py  query_rewriter.py  reflective.py  retriever.py  router.py  scenario.py  semantic.py  skill_distill.py  store.py
madcop/meta_harness/: __init__.py  __main__.py  archive.py  evaluate.py  loop.py  proposer.py  suites.py  task_harness.py
madcop/planning/: __init__.py  heuristics.py
madcop/quant/: __init__.py  backtest.py  factors.py  paper.py  store.py
madcop/rca/: graph.py  seed.py
madcop/replay/: __init__.py  engine.py
madcop/server/: __init__.py  __main__.py  app.py  cc_haha_compat.py  chat_runtime.py  deps.py  events.py  madcop_compat.py  memory_pipeline.py  models.py  projects.py  session_lifecycle.py  session_persist.py  steer_queue.py  task_scheduler.py  webui_compat.py
madcop/skill/: __init__.py  templates.py
madcop/strategy/: __init__.py  context_compactor.py  cost.py  providers.py  router.py  scratchpad.py  wal.py
madcop/tools/: __init__.py  clarify.py  computer.py  cron.py  deferred.py  docker_sandbox.py  eventbus.py  files.py  inline_attachments.py  mac_ax.py  mac_ax_mcp_server.py  market.py  mcp.py  memory.py  paper.py  permissions.py  (+9 more)
nexus_supply/: __init__.py  __main__.py
scripts/: make_screenshots.py
tests/: test_agent.py  test_agent_mode.py  test_anomaly.py  test_attachment_and_workdir.py  test_banner.py  test_brain_consolidate.py  test_brain_middleware.py  test_brain_prescreen.py  test_brain_schema_md.py  test_brain_store.py  test_counterfactual.py  test_cusum.py  test_decision.py  test_deep_engine.py  test_doctor.py  test_eval.py  test_event.py  test_llm.py  test_llm_client_basics.py  test_llm_factory_retry.py  test_llm_harness.py  test_llm_stream.py  test_memory.py  test_meta_harness.py  test_planning.py  test_rca.py  test_react_normalize.py  test_replay.py  test_session_context.py  test_settings.py  test_skill.py  test_skill_distill_sse.py  test_specialist_runtime.py  test_steer_queue.py  test_task_scheduler.py  test_tasks_inspection.py  test_tools.py  test_ws_limits_mcp_import.py  test_zones.py
web/: index.html
(+700 files in other folders)
