[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madcop"
version = "2.6.0"
description = "madcop — the supply chain cop that goes mad for anomalies. Pluggable LangGraph framework: detect, diagnose, decide."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Lin Ruihan", email = "chuiniu@me.com" },
]
keywords = [
    "supply-chain", "langgraph", "agent", "anomaly-detection",
    "rca", "root-cause-analysis", "ai-pm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "rich>=13.0",
    "langgraph>=0.2,<1.0",
    # Web server (v2.1+)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "cryptography>=42.0",  # Fernet for settings encryption (v2.1+)
    "httpx>=0.27",
    # LLM client
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=4.0",
    "pyyaml>=6.0",  # v0.8.0 subagent config loader (YAML format)
    "tomli>=2.0; python_version < '3.11'",  # v0.8.0 TOML on Python 3.10
]

[project.urls]
Homepage = "https://github.com/linmy666/madcop"
Repository = "https://github.com/linmy666/madcop"
Issues = "https://github.com/linmy666/madcop/issues"

[tool.setuptools.packages.find]
include = ["madcop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
